--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@things-factory/screencast-base",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0",
   "main": "dist-server/index.js",
   "browser": "client/index.js",
   "things-factory": true,
