--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "migration:revert": "node ./node_modules/typeorm/cli.js migration:revert"
   },
   "dependencies": {
-    "@things-factory/screencast-proxy-service": "^2.0.0",
-    "@things-factory/shell": "^2.0.0"
+    "@things-factory/screencast-proxy-service": "^2.0.0"
   },
   "devDependencies": {}
 }
